<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="app_txt">My Nanodegree Apps!</string>
    <string name="project1_name">SPOTIFY STREAMER</string>
    <string name="project2_name">SCORES APP</string>
    <string name="project3_name">LIBRARY APP</string>
    <string name="project4_name">BUILT IT BIGGER</string>
    <string name="project5_name">XYZ READER</string>
    <string name="project6_name">CAPSTONE: MY OWN APP</string>
</resources>
