<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffede7f6"
    android:focusable="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView android:text="@string/app_txt"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/title"
            android:textColor="#ff2a07ff"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="25sp"
            android:textAlignment="center" />

        <Button
            android:text="@string/project1_name"
            android:id="@+id/button1"
            android:onClick="sendMessage"
            style="@style/layout_apps_btn" />

        <Button
            android:text="@string/project2_name"
            android:id="@+id/button2"
            android:onClick="sendMessage"
            style="@style/layout_apps_btn" />

        <Button
            android:text="@string/project3_name"
            android:id="@+id/button3"
            android:onClick="sendMessage"
            style="@style/layout_apps_btn" />

        <Button
            android:id="@+id/button4"
            android:text="@string/project4_name"
            android:onClick="sendMessage"
            style="@style/layout_apps_btn"  />

        <Button
            android:text="@string/project5_name"
            android:id="@+id/button5"
            android:onClick="sendMessage"
            style="@style/layout_apps_btn" />

        <Button
            android:text="@string/project6_name"
            android:id="@+id/button6"
            android:onClick="sendMessage"
            style="@style/layout_myApp_btn" />
    </LinearLayout>
</RelativeLayout>
